@@ -87,7 +87,8 @@ mode.isabelle.customSettings=true
 mode.isabelle.folding=isabelle
 mode.isabelle.sidekick.parser=isabelle
 mode.isabelle.sidekick.showStatusWindow.label=true
-mode.ml.sidekick.parser=isabelle
+mode.isabelle-ml.sidekick.parser=isabelle-ml
+mode.sml.sidekick.parser=isabelle-sml
 sidekick.parser.isabelle.label=Isabelle
 mode.bibtex.folding=sidekick
 mode.bibtex.sidekick.parser=bibtex
