@@ -63,6 +63,10 @@ is relevant to avoid confusion of Pure.simp vs. HOL.simp.
 * Cartouche abbreviations work both for " and ` to accomodate typical
 situations where old ASCII notation may be updated.
 
+* Isabelle/ML and Standard ML files are presented in Sidekick with the
+tree structure of section headings: this special comment format is
+described in "implementation" chapter 0, e.g. (*** section ***).
+
 * IDE support for the Isabelle/Pure bootstrap process, with the
 following independent stages:
 
